examples/test/testpolicy19368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19368
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key48: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value33
          key5: value18
          key33: value21
      podSelector:
        matchLabels:
          key6: value37
          key33: value6
